# align-it

./: .clang-format  .gitignore  CMakeLists.txt
cmake/modules/: FindRDKit.cmake
include/: addBest.h  alignLib.h  alignment.h  aromFuncCalc.h  attaFuncCalc.h  calcPharm.h  chargeFuncCalc.h  compScore.h  coordinate.h  defines.h  exitFuncCalc.h  fileType.h  functionMapping.h  getExt.h  hAccFuncCalc.h  hDonFuncCalc.h  hybridCalc.h  lipoFuncCalc.h  logOut.h  logPharmacophores.h  logScores.h  mainErr.h  mainWar.h  options.h  parseCommandLine.h  pharMerger.h  pharmacophore.h  printHeader.h  printInfo.h  printProgress.h  printUsage.h  rankType.h  result.h  siMath.h  solutionInfo.h  stringTokenizer.h  utilities.h
pyalignit/: __init__.py  core.py  cpyalignit.pyi  draw.py  exclusion.py  fileio.py  pharfile.py  pymol.py  test.py
src/: addBest.cpp  alignLib.cpp  alignment.cpp  aromFuncCalc.cpp  attaFuncCalc.cpp  calcPharm.cpp  chargeFuncCalc.cpp  compScore.cpp  coordinate.cpp  exitFuncCalc.cpp  functionMapping.cpp  getExt.cpp  hAccFuncCalc.cpp  hDonFuncCalc.cpp  hybridCalc.cpp  lipoFuncCalc.cpp  logOut.cpp  logPharmacophores.cpp  logScores.cpp  main.cpp  mainErr.cpp  mainWar.cpp  options.cpp  parseCommandLine.cpp  pharMerger.cpp  pharmacophore.cpp  printHeader.cpp  printInfo.cpp  printProgress.cpp  printUsage.cpp  result.cpp  siMath.cpp  solutionInfo.cpp  stringTokenizer.cpp  utilities.cpp
src/Wrap/: CMakeLists.txt  cpyalignit.cpp
